tests/baselines/reference/callbackArgsDifferByOptionality.errors.txt
tests/cases/compiler/callbackArgsDifferByOptionality.ts(4,5): error TS2552: Cannot find name 'cb'. Did you mean 'x3'?


==== tests/cases/compiler/callbackArgsDifferByOptionality.ts (1 errors) ====
    function x3(callback: (x?: 'hi') => number);
    function x3(callback: (x: string) => number);
    function x3(callback: (x: any) => number) {
        cb();
        ~~
!!! error TS2552: Cannot find name 'cb'. Did you mean 'x3'?
    }